fix: fine tune scrollbar and close button of error panel

--- a/packages/uhk-web/src/app/app.component.scss
+++ b/packages/uhk-web/src/app/app.component.scss
@@ -24,17 +24,23 @@
                 .btn-close {
                     position: absolute;
                     top: 2px;
-                    right: 2px;
+                    right: 14px;
                     display: inline;
+                    z-index: 10;
                 }
 
-                pre {
+                .error-panel-content {
+                    overflow: auto;
                     position: absolute;
+                    top: 0;
+                    bottom: 0;
                     left: 0;
                     right: 0;
-                    bottom: 0;
-                    top: 0;
-                    margin: 0;
+
+                    pre {
+                        overflow: visible;
+                        margin: 0;
+                    }
                 }
             }
 
